# DB-manager

./: .gitignore  CMakeLists.txt
res/: resources.qrc
src/: main.cpp
src/model/: data_types.cpp  data_types.h  database.cpp  database.h  delegates.cpp  delegates.h  horizontal_proxy_model.cpp  horizontal_proxy_model.h
src/utility/: global.h  utility.cpp  utility.h
src/view/: add_patient_dlg.cpp  add_patient_dlg.h  date_edit_ex.cpp  date_edit_ex.h  main_window.cpp  main_window.h  patient_info_form.cpp  patient_info_form.h  photo_viewer.cpp  photo_viewer.h  sql_table_view.cpp  sql_table_view.h  table_view_ex.cpp  table_view_ex.h
